[package]
name = "dndhelper"
version = "0.1.0"
edition = "2021"

[features]
bevy = [
    "dep:bevy",
    "dep:bevy_asset_loader",
    "dep:bevy_common_assets",
    "dep:bevy_egui",
    "dep:bevy_prototype_lyon",
    "dep:getrandom",
    "dep:hexx",
    "dep:rand",
]

[[bin]]
name = "dndhelper"
required-features = ["bevy"]

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.13.1", optional = true }
bevy_asset_loader = { version = "0.20.2", features = ["standard_dynamic_assets"], optional = true }
bevy_common_assets = { version = "0.10.0", features = ["ron"], optional = true }
bevy_egui = { version = "0.27.0", optional = true }
bevy_prototype_lyon = { version = "0.11.0", optional = true }
enum-iterator = "2.1.0"
getrandom = { version = "0.2.15", features = ["js"], optional = true }
hexx = { version = "0.17.0", optional = true }
rand = { version = "0.8.5", optional = true }
ron = "0.8.1"
serde = { version = "1.0.203", features = ["serde_derive"] }
